<resources>
    <string name="app_name">Talk To</string>
    
    <!--登陆页面-->
    <string name="login">登陆</string>
    <string name="login_loading">登陆中...</string>
    <string name="login_success">登陆成功</string>
    <string name="login_have_no_account">还没有账号？</string>
    <string name="login_goto_register">立即注册</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>

    <!--注册页面-->
    <string name="register">注册</string>
    <string name="register_loading">注册中...</string>
    <string name="register_success">注册完成</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_repassword">确认密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_sex">性别</string>
    <string name="register_sex_male">男</string>
    <string name="register_sex_female">女</string>
    <string name="register_hint_username">请输入用户名</string>
    <string name="register_hint_password">请输入密码</string>
    <string name="register_hint_repassword">请重新输入密码</string>
    <string name="register_hint_email">请输入邮箱</string>

</resources>
