<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="com.myxh.talkto.RegisterActivity" >

	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/register"
	    android:textColor="#fff"
	    android:textSize="30sp"
	    android:gravity="center_horizontal"
	    android:background="#000"/>
	<!-- 注册信息 -->
	<!-- 用户名 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#fff"
	    android:layout_margin="10dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
	        android:text="@string/register_username"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/register_hint_username"
	        android:id="@+id/et_usrname_register"/>
	</LinearLayout>
	<!-- 密码 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#fff"
	    android:layout_margin="10dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
	        android:text="@string/register_password"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/register_hint_password"
	        android:inputType="textPassword"
	        android:id="@+id/et_password_register"/>
	</LinearLayout>
	<!-- 确认密码 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#fff"
	    android:layout_margin="10dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
	        android:text="@string/register_repassword"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/register_hint_repassword"
			android:inputType="textPassword"
	        android:id="@+id/et_repassword_register"/>
	</LinearLayout>
	<!-- 邮箱 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#fff"
	    android:layout_margin="10dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
	        android:text="@string/register_email"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/register_hint_email"
	        android:id="@+id/et_email_register"/>
	</LinearLayout>
	<!-- 性别 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="#fff"
	    android:layout_margin="10dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
	        android:text="@string/register_sex"/>
	    <RadioGroup 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="5dp"
		    android:id="@+id/rg_sex_register"
	        android:orientation="horizontal">
	        <RadioButton 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/register_sex_male"
	            android:id="@+id/rb_male_register"
	            android:checked="true"
	            style="@android:style/Widget.CompoundButton.Star"/>
	        <RadioButton 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/register_sex_female"
	            android:id="@+id/rb_female_register"
	            style="@android:style/Widget.CompoundButton.Star"/>
	    </RadioGroup>
	</LinearLayout>
	<!-- 注册按钮 -->
	<com.dd.processbutton.iml.ActionProcessButton
		android:id="@+id/btn_register"
		android:onClick="register_btn_click"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginBottom="16dp"
		android:layout_marginTop="10dp"
		android:text="@string/register"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		custom:pb_colorComplete="@color/green_complete"
		custom:pb_colorNormal="@color/blue_normal"
		custom:pb_colorPressed="@color/blue_pressed"
		custom:pb_colorProgress="@color/purple_progress"
		custom:pb_textComplete="@string/register_success"
		custom:pb_textProgress="@string/register_loading"
		custom:pb_cornerRadius="8dp"/>
    
</LinearLayout>
