<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myxh.talkto.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="5dp"
                android:hint="@string/login_hint_username"
                android:id="@+id/et_username_login"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="#00000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:drawableLeft="@drawable/login_icon_password"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:id="@+id/et_password_login"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:ellipsize="end"/>
        </LinearLayout>
        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_login"
            android:onClick="login_click"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/login_success"
            custom:pb_textProgress="@string/login_loading"
            custom:pb_cornerRadius="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_have_no_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_goto_register"
            android:textColor="#00f"
            android:clickable="true"
            android:onClick="register_click"/>
    </LinearLayout>

</RelativeLayout>
